Minor styling tweaks

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,14 +11,15 @@
   font-weight: normal;
 }
 
-strong{
-  font-weight: 700;
+html, 
+body {
+    height: 100%;
 }
 
 body:before, body:after {
     content: "";
     position: fixed;
-    background: #303233; /*#ff3300;*/
+    background: #555d60; /*#303233; /*#ff3300;*/
     left: 0;
     right: 0;
     height: 10px;
@@ -30,13 +31,16 @@ body:after {
     bottom: 0;
 }
 body {
-    border-left: 10px solid #303233; /*#ff3300;*/
-    border-right: 10px solid #302233; /*#ff3300;  */
+    border-left: 10px solid #555d60;/*#303233; /*#ff3300;*/
+    border-right: 10px solid #555d60;/*#302233; /*#ff3300;  */
     margin:0;
     background: #000;
     padding:20px;
 }
 
+.home h1{
+  margin-top: 100px;
+}
 
 .fa{
   color:#fff;
