--- a/css/styles.css
+++ b/css/styles.css
@@ -8,40 +8,35 @@
   text-align:center;
   color:#fff;
   font-family: 'Raleway', sans-serif;
-  font-weight: normal;
 }
 
-html, 
 body {
-    height: 100%;
-}
-
-body:before, body:after {
-    content: "";
-    position: fixed;
-    background: #555d60; /*#303233; /*#ff3300;*/
-    left: 0;
-    right: 0;
-    height: 10px;
-}
-body:before {
-    top: 0;
-}
-body:after {
-    bottom: 0;
-}
-body {
-    border-left: 10px solid #555d60;/*#303233; /*#ff3300;*/
-    border-right: 10px solid #555d60;/*#302233; /*#ff3300;  */
     margin:0;
     background: #000;
     padding:20px;
 }
 
-.home h1{
-  margin-top: 100px;
+/* This puts a border round the page */
+#top, #bottom, #left, #right {
+  background: #555d60;
+  position: fixed;
 }
+#left, #right {
+  top: 0; bottom: 0;
+  width: 10px;
+}
+#left { left: 0; }
+#right { right: 0; }
+    
+#top, #bottom {
+  left: 0; right: 0;
+  height: 10px;
+}
+#top { top: 0; }
+#bottom { bottom: 0; }
 
+
+/* Set the colour and spacing of Font Awesome icons */
 .fa{
   color:#fff;
   margin-right: 2px;
@@ -50,6 +45,10 @@ body {
 .fa-twitter{
   margin-right:8px;
 }
+
+
+/* Font styles
+------------------------------*/
 
 ul li{
   list-style-type: none;
@@ -67,6 +66,33 @@ ol li ul li {
   list-style-type: disc;
 }
 
+.home h1{
+  margin-top: 100px;
+}
+
+h1, h2, h3{
+  font-weight: 300;
+}
+
+p {
+  font-weight: 400;
+}
+
+a{
+  text-decoration: none;
+}
+
+p a:link, p a:visited, li a:link, li a:visited  {
+  font-weight: 700;
+}
+
+p a:hover, p a:active, li a:hover, li a:active {
+  font-weight: normal;
+}
+
+
+/* Table styles
+------------------------------*/
 table{
   background:#fff;
   margin:0 auto;
@@ -89,17 +115,6 @@ td{
   color: #000;
   border:0;
   padding:10px;
-}
-a{
-  text-decoration: none;
-}
-
-p a {
-  font-weight: 700;
-}
-
-p a:hover {
-  font-weight: normal;
 }
 
 /* new version of micro clearfix hack */
@@ -188,7 +203,7 @@ ol li, ol li ul li{
 
 }
 
-/* Flexbox
+/* Flexbox 
 -----------------------------------------*/
 
 .flex-container {
@@ -236,8 +251,7 @@ ol li, ol li ul li{
   justify-content: space-around; 
 }
 
-.flex-item {
-  
+.flex-item {  
   margin: 8px;
   width:auto;
   border: 5px solid #fff;
@@ -302,14 +316,9 @@ input[type="checkbox"]{
   display: block;
   width:200px; 
 }
-#collapse:checked + label:before{
-//  position:relative;
-  //right:calc(-160px);
-//  opacity:0.5;
-  
-}
 
-/* Menu full
+
+/* Menu full and fullscreen styles
 -----------------------------------------*/
 
 @media screen and (min-width: 600px) {
@@ -339,7 +348,10 @@ nav ul li{
   display: inline-block;
   padding:20px 10px 10px;
   opacity: 1;
+}
 
+nav ul li:hover, nav ul li.selected{
+  border-bottom:1px solid #fff;
 }
 
 nav ul li:last-child {
@@ -370,7 +382,13 @@ nav ul li:nth-child(3) {
 }
 nav ul li:nth-child(4) {
   background: green;  
-}*/
+}
+nav ul li:nth-child(5) {
+  background: blue;  
+}
+
+
+*/
 
 
 
